Moved files into src/ directory

--- a/php/composer.json
+++ b/php/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-0": {
-            "ChatterBotApi\\": "."
+            "ChatterBotApi\\": "src/"
         }
     }
 }
