--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>ca.pjer</groupId>
     <artifactId>chatter-bot-api</artifactId>
-    <version>1.3.3</version>
+    <version>1.4.0-SNAPSHOT</version>
 
     <name>Chatter Bot API</name>
     <description>
@@ -18,7 +18,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.5</java.version>
+        <java.version>1.6</java.version>
     </properties>
 
     <licenses>
@@ -61,8 +61,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
