--- a/java/pom.xml
+++ b/java/pom.xml
@@ -53,7 +53,13 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.9.1</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
