--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>ca.pjer</groupId>
     <artifactId>chatter-bot-api</artifactId>
-    <version>1.4.2-SNAPSHOT</version>
+    <version>1.4.2</version>
 
     <name>Chatter Bot API</name>
     <description>
